[gd_scene load_steps=42 format=2]

[ext_resource path="res://Player/StateMachine/StateMachine.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Pixel Adventure 2/Enemies/Chicken/Idle (32x34).png" type="Texture" id=2]
[ext_resource path="res://Assets/Pixel Adventure 2/Enemies/Chicken/Run (32x34).png" type="Texture" id=3]
[ext_resource path="res://Interactables/AI/Idle.gd" type="Script" id=4]
[ext_resource path="res://Interactables/AI/Chicken.gd" type="Script" id=5]
[ext_resource path="res://Interactables/AI/Run.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/press_start/prstartk.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Pixel Adventure 2/Enemies/Chicken/Hit (32x34).png" type="Texture" id=8]
[ext_resource path="res://Interactables/AI/Death.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 352, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 416, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 34 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ SubResource( 31 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 15, 13 )

[sub_resource type="DynamicFont" id=30]
size = 8
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 15, 13 )

[node name="Chicken" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 5 )

[node name="StateMachine" parent="." instance=ExtResource( 1 )]
initial_state = NodePath("Idle")
path_to_text_label = NodePath("../Label")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
path_to_chicken = NodePath("../..")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
path_to_chicken = NodePath("../..")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
path_to_chicken = NodePath("../..")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "Idle"
frame = 8
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 29 )

[node name="LeftRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -1000, 0 )
collision_mask = 4

[node name="RightRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 4

[node name="Label" type="Label" parent="."]
margin_left = -85.0
margin_top = -29.0
margin_right = 87.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 30 )
text = "State"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 4 )
shape = SubResource( 32 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
